# gdpr-art5-engine

./: .gitignore  README.md  bench_async.py  check_accountability.py  check_corpus.py  locustfile.py  pyproject.toml  quick_load.py
.github/workflows/: ci.yml
gdpr_engine/: __init__.py  api.py  audit_log.py  cli.py  duty_store.py  evaluator.py  loader.py  model.py  policy_store.py
tests/: corpus.csv  test_accountability.py  test_api.py  test_audit.py  test_basic.py  test_cli.py  test_constraints.py  test_corpus.py  test_duty.py  test_evaluator.py  test_loader.py  test_location.py  test_policy_store.py
tests/fixtures/: policy-1.json  policy-2.json  sample_policy.json
