[project]
name            = "gdpr-engine"
version         = "0.0.1"
description     = "Minimal GDPR Article-5 policy evaluator"
authors         = [{ name = "Menze de Hoop" }]
requires-python = ">=3.11"

# Runtime requirements
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "python-dateutil",
  "python-dotenv",
  "httpx",
  "typer",                  
]

# Dev / test / lint extras
[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "ruff",
  "mypy",
  "locust>=2.37",
]

# CLI entry-point
[project.scripts]
gdprctl = "gdpr_engine.cli:app"

# Build backend
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"